:baby_bottle: feui version 0.5.4

--- a/docs/feui/guide/component/keyboard.html
+++ b/docs/feui/guide/component/keyboard.html
@@ -563,7 +563,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/pwdinput.html" class="sidebar-link">PwdInput 密码输入框</a>
+      <a href="/docs/feui/guide/component/pwdinput.html" class="sidebar-link">Pwdinput 密码输入框</a>
     </li>
   
     
@@ -923,7 +923,7 @@
           <span>← <a href="/docs/feui/guide/component/textarea.html">Textarea 文本域</a></span>
         
         
-          <span style="float: right;"><a href="/docs/feui/guide/component/pwdinput.html">PwdInput 密码输入框</a> →</span>
+          <span style="float: right;"><a href="/docs/feui/guide/component/pwdinput.html">Pwdinput 密码输入框</a> →</span>
         
       </div>
     
