--- a/docs/feui/guide/component/imgpreview.html
+++ b/docs/feui/guide/component/imgpreview.html
@@ -395,6 +395,20 @@
     
     
     <li>
+      <a href="/docs/feui/guide/component/checker.html" class="sidebar-link new">Checker 选择按钮</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
       <a href="/docs/feui/guide/component/countup.html" class="sidebar-link">Countup 数字滚动</a>
     </li>
   
@@ -747,7 +761,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/imgpreview.html" class="sidebar-link current new">ImgPreview 图片预览</a>
+      <a href="/docs/feui/guide/component/imgpreview.html" class="sidebar-link current">ImgPreview 图片预览</a>
     </li>
   
     
