--- a/docs/feui/guide/component/countup.html
+++ b/docs/feui/guide/component/countup.html
@@ -395,6 +395,20 @@
     
     
     <li>
+      <a href="/docs/feui/guide/component/checker.html" class="sidebar-link new">Checker 选择按钮</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
       <a href="/docs/feui/guide/component/countup.html" class="sidebar-link current">Countup 数字滚动</a>
     </li>
   
@@ -747,7 +761,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/imgpreview.html" class="sidebar-link new">ImgPreview 图片预览</a>
+      <a href="/docs/feui/guide/component/imgpreview.html" class="sidebar-link">ImgPreview 图片预览</a>
     </li>
   
     
@@ -942,6 +956,8 @@
     </div>
     
       <div class="guide-links">
+        
+          <span>← <a href="/docs/feui/guide/component/checker.html">Checker 选择按钮</a></span>
         
           <span>← <a href="/docs/feui/guide/component/checklist.html">Checklist 按钮组</a></span>
         
