--- a/docs/feui/guide/component/checker.html
+++ b/docs/feui/guide/component/checker.html
@@ -381,7 +381,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/checker.html" class="sidebar-link current new">Checker 选择按钮</a>
+      <a href="/docs/feui/guide/component/checklist.html" class="sidebar-link">Checklist 按钮组</a>
     </li>
   
     
@@ -395,7 +395,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/checklist.html" class="sidebar-link">Checklist 按钮组</a>
+      <a href="/docs/feui/guide/component/checker.html" class="sidebar-link current">Checker 选择按钮</a>
     </li>
   
     
@@ -607,7 +607,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/datetime.html" class="sidebar-link">Datetime 日期</a>
+      <a href="/docs/feui/guide/component/datetime.html" class="sidebar-link new">Datetime 日期</a>
     </li>
   
     
